--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "\"A tool to scrap data with puppeteer\"",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
